fixed spacing

--- a/styles.css
+++ b/styles.css
@@ -142,5 +142,6 @@ h5{
     body {
         background-size: cover;
         background-position: center;
+        width: 100%;
     }
 }
